--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 is-url = "1.0.4"
-reqwest = { version = "0.11.23", features = ["blocking"] }
+reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.111"
